--- a/NodeJS/day04/02.ejs/views/login.ejs
+++ b/NodeJS/day04/02.ejs/views/login.ejs
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>login</title>
+  <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
   <h1>用户登录页面</h1>
+  <p class="errMsg"><%= errMsg %></p>
   <form action="/login" method="post">
     用户名: <input type="text" name="username"> <br><br>
     密码: <input type="password" name="password"> <br><br>
