html 图片地址的处理 请空目录

--- a/projectBuild/work/webpack_test/src/less/test2.less
+++ b/projectBuild/work/webpack_test/src/less/test2.less
@@ -1,7 +1,7 @@
 #box2{
   width: 200px;
   height: 200px;
-  background: deeppink;
+  background: url("../images/2.jpg");
   p {
     color: white;
   }
