--- a/projectBuild/work/webpack_test/src/less/test1.less
+++ b/projectBuild/work/webpack_test/src/less/test1.less
@@ -4,6 +4,7 @@
   background: url("../images/1.jpg");
   background-size: 100% 100%;
   p {
-    color: white;
+    color: rebeccapurple;
+    display: flex;
   }
 }
